simon feedback